Fixes overflowing status texts.

--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -646,6 +646,7 @@ ul.sidebar_team li .avatar,
       color:#fff;
       line-height:1.1;
       margin-bottom:6px;
+      overflow: hidden;
     }
   }
 }
